--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,16 @@
 	background-color: black;
 	color: white;
 }
+
+.newOrderIcon {
+	text-align: center;
+	position: absolute;
+	color: white;
+	background-color: red;
+	border-radius: 100%;
+	height: 19px;
+	width: 19px;
+	padding: 3px;
+	right: 5px;
+	top: -4px;
+}
