--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .statusBar {
 	height: 75px;
-	border: 2px solid black;
+	border: 2px solid rgb(204, 148, 3);
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
@@ -8,7 +8,7 @@
 }
 
 .statusButton {
-	border: 2px solid black;
+	border: 2px solid rgb(204, 148, 3);
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -18,19 +18,65 @@
 }
 
 .statusButtonActive {
-	background-color: black;
+	background-color: rgb(204, 148, 3);
 	color: white;
 }
 
 .newOrderIcon {
 	text-align: center;
 	position: absolute;
-	color: white;
-	background-color: red;
+	color: rgb(204, 148, 3);
+	background-color: white;
 	border-radius: 100%;
+	border: 1px solid rgb(204, 148, 3);
 	height: 19px;
 	width: 19px;
-	padding: 3px;
+	padding: 2px;
 	right: 5px;
 	top: -4px;
+	text-shadow: 0px 0px 0 white !important;
+	animation: 1.5s scaleComponent infinite
 }
+
+@keyframes scaleComponent {
+	0%	{
+		transform: scale(1);
+	}
+	50% {
+		transform: scale(1.5)
+	}
+}
+
+.prepMenu, .menu {
+	background-color: rgb(255, 200, 57) !important;
+}
+
+.menu > a, .prepMenu {
+	color: white !important;
+	text-shadow:
+		-1.5px -1.5px 0 rgb(204, 148, 3),
+		1.5px -1.5px 0 rgb(204, 148, 3),
+		-1.5px 1.5px 0 rgb(204, 148, 3),
+		1.5px 1.5px 0 rgb(204, 148, 3);
+}
+
+.mainSegment {
+	color: rgb(204, 148, 3) !important;
+}
+
+button {
+	width: 45%;
+	background-color: rgb(255, 200, 57) !important;
+	color: white !important;
+	border: 1.5px solid rgb(204, 148, 3) !important;
+	text-shadow:
+		-1.5px -1.5px 0 rgb(204, 148, 3),
+		1.5px -1.5px 0 rgb(204, 148, 3),
+		-1.5px 1.5px 0 rgb(204, 148, 3),
+		1.5px 1.5px 0 rgb(204, 148, 3) !important;
+	border-radius: 0px !important;
+}
+
+
+
+
